# docxmd_converter

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FINAL_UNIVERSALIZATION_REPORT.md  GITHUB_SETUP.md  GITHUB_UPDATE_SUCCESS.md  INSTALLATION_SUMMARY.md  INTEGRATION_COMPLETED.md  LICENSE  MANIFEST.in  PACKAGE_STATUS.md  POST_PROCESSING_INTEGRATION.md  PROJECT_FINAL_STATUS.md  PYPI_DEPLOYMENT.md  PYPI_SUCCESS.md  README.md  TESTING_RESULTS.md  __init__.py  demo.py  example_test.md  final_demo.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_dev.py  test_conversion.py  test_gui_quick.py  test_post_processing.py  🎉_PROJECT_COMPLETED.md
.github/: FINAL_SYSTEM_REPORT.md  PUBLISHING_GUIDE.md  PULL_REQUEST_TEMPLATE.md  PYPI_SETUP.md  README.md  RELEASE_CHECKLIST.md  WORKFLOWS_GUIDE.md
.github/workflows/: ci.yml  publish.yml  release.yml
config/: document_templates.json
docs/: ALL_FIXES_COMPLETED.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CLEANUP_SUCCESS.md  FINAL_CLEANUP_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_READINESS_REPORT.md  FINAL_STATUS.md  FIXES_COMPLETED.md  PROJECT_SUMMARY.md  PUBLICATION_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  PYPI_READY_REPORT.md  QUICK_PUBLISH.md  QUICK_PUBLISH_GUIDE.md  QUICK_START.md  QUICK_START_GUIDE.md  README_NEW.md  README_PYPI.md  README_STATUS.md  READY_FOR_PUBLICATION.md  RECOVERY_REPORT.md  ULTIMATE_SUCCESS_REPORT.md  USAGE_GUIDE.md
docs/Conversion/: test_archaeologist.md  Археограф.docx  Археограф.md
docs/Conversion/1/: Архивист.docx  Архивист.md
docs/documentation_management/: AI_Checklist.md  Development_Integration.md  Practices.md  Rules.md  Style.md
docxmd_converter/: __init__.py  cli.py  core.py  enhanced_processor.py  gui.py  processor.py  reporting.py
examples/: __init__.py  basic_usage.py
scripts/: INTEGRATION_NOTICE.md  README_DOCUMENT_PROCESSOR.md  REPORT_DOCUMENT_PROCESSING.md  advanced_document_processor.py  build_package.py  demo_all_features.py  document_processor.py  publish.sh  publish_pypi.py  publish_test.py  run_system.py
src/: __init__.py
src/docxmd_converter/: __init__.py  gui.py  intelligent_processor.py  models.py  nlp_analyzer.py  quality_assessor.py  web_interface.py
src/utils/: __init__.py  content_analyzers.py  reporting.py
templates/: base.html  index.html  statistics.html
test_conversion/: template.docx
test_conversion/input/: rich_test.md  test_document.docx
test_conversion/output/: api_single_test.docx  processing_report.md  rich_test.docx  test_document.md  test_for_processing.md
tests/: __init__.py  test_core.py
uploads/: 20250810_123738_docx
