[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docxmd-converter"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Convert between .docx and .md files with template support"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
keywords = ["docx", "markdown", "converter", "pandoc", "office", "documentation"]
dependencies = [
    "pypandoc>=1.11",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "bump2version>=1.0",
    "twine>=4.0",
    "build>=0.10",
    "pre-commit>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/docxmd-converter"
"Bug Reports" = "https://github.com/yourusername/docxmd-converter/issues"
"Source" = "https://github.com/yourusername/docxmd-converter"
"Documentation" = "https://github.com/yourusername/docxmd-converter#readme"

[project.scripts]
docxmd = "docxmd_converter.cli:main"
docxmd-gui = "docxmd_converter.gui:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["docxmd_converter*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=docxmd_converter",
    "--cov-report=term-missing",
    "--cov-report=html",
]